# docs/swagger.json
@@ -1887,6 +1887,13 @@
                         "description": "Template name",
                         "name": "template",
                         "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "default": false,
+                        "description": "Force regeneration ignoring cache",
+                        "name": "force_regenerate",
+                        "in": "query"
                     }
                 ],
                 "responses": {
